--- a/audio.html
+++ b/audio.html
@@ -15,8 +15,8 @@
     .audio_title{width: 100%;height: 85px;background: #4281f4;color: #fff;}
     .audio_title_box{width: 300px;margin: 0 auto;padding: 10px 0;line-height: 65px;}
     .audio_title_box span{display:inline-block;height: 30px;}
-    .audio_name{text-indent: 40px;font-size: 30px;}
-    .audio_auther{font-size: 16px;text-indent: 10px;}
+    .audio_name{text-indent: 40px;font-size: 30px;color: #fff;}
+    .audio_auther{font-size: 16px;text-indent: 10px;color: #fff;}
 
     .audio_main{height: 60px;line-height: 60px;color:#000;}
     .audio_main_box{width: 500px;margin: 0 auto;}
